force-app/main/default/objects/Product_Payment_Staging__c/Product_Payment_Staging__c.object-meta.xml
<CustomObject>
    <description>Product Payment Staging Object to store staging records for Payment Upload</description>
    <label>Product Payment Staging</label>
    <nameField>
        <displayFormat>PPS-{00000}</displayFormat>
        <label>Product Payment Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Payment Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>