force-app/main/default/objects/Product_Payment_Staging__c/fields/Agency_Calculated_Comm__c.field-meta.xml
<CustomField>
    <fullName>Agency_Calculated_Comm__c</fullName>
    <description>Agency Calculated Commission</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agency Calculated Commission</inlineHelpText>
    <label>Agency Calculated Commission</label>
    <length>50</length>
    <type>Text</type>
</CustomField>