force-app/main/default/objects/Product_Payment_Staging__c/fields/Agency_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agency_Commission_Rate__c</fullName>
    <description>Agency Commission Rate</description>
    <inlineHelpText>Agency Commission Rate</inlineHelpText>
    <label>Agency Commission Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>