force-app/main/default/objects/Product_Payment_Staging__c/fields/Billing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Entity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>