force-app/main/default/objects/Product_Payment_Staging__c/fields/CCS_Account__c.field-meta.xml
<CustomField>
    <fullName>CCS_Account__c</fullName>
    <description>Account Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Account Number</inlineHelpText>
    <label>Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>