force-app/main/default/objects/Product_Payment_Staging__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <description>Cheque Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Cheque Number</inlineHelpText>
    <label>Cheque Number</label>
    <type>TextArea</type>
</CustomField>