force-app/main/default/objects/Product_Payment_Staging__c/fields/Commission_Rate_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate_for_Payment__c</fullName>
    <description>Actual Commission Rate used for Commission Amount</description>
    <inlineHelpText>Actual Commission Rate used for Commission Amount</inlineHelpText>
    <label>Commission Rate for Payment</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>