force-app/main/default/objects/Product_Payment_Staging__c/fields/Direct_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Direct_Payment_Type__c</fullName>
    <description>Direct Payment Type populated when excel processing</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Direct Payment Type populated when excel processing</inlineHelpText>
    <label>Direct Payment Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>