force-app/main/default/objects/Product_Payment_Staging__c/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <description>Expected Value</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Expected Value</inlineHelpText>
    <label>Expected Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>