force-app/main/default/objects/Product_Payment_Staging__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fee Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>