force-app/main/default/objects/Product_Payment_Staging__c/fields/Interest_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Interest_Adjustment__c</fullName>
    <description>Interest Adjustment</description>
    <inlineHelpText>Interest Adjustment</inlineHelpText>
    <label>Interest Adjustment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>