force-app/main/default/objects/Product_Payment_Staging__c/fields/Interest_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Interest_Payment_Amount__c</fullName>
    <description>Interest Payment Amount</description>
    <inlineHelpText>Interest Payment Amount</inlineHelpText>
    <label>Interest Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>