force-app/main/default/objects/Product_Payment_Staging__c/fields/Interest_Rate_to_For_Interest_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_to_For_Interest_Adjustment__c</fullName>
    <description>Interest Rate to For Interest Adjustment</description>
    <inlineHelpText>Interest Rate to For Interest Adjustment</inlineHelpText>
    <label>Interest Rate to For Interest Adjustment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>