force-app/main/default/objects/Product_Payment_Staging__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Entity</label>
    <length>20</length>
    <type>Text</type>
</CustomField>