force-app/main/default/objects/Product_Payment_Staging__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Memo</label>
    <type>TextArea</type>
</CustomField>