force-app/main/default/objects/Product_Payment_Staging__c/fields/Original_Of_Payment_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Original_Of_Payment_Reversal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original_Of_Payment_Reversal</label>
    <length>25</length>
    <type>Text</type>
</CustomField>