force-app/main/default/objects/Product_Payment_Staging__c/fields/Pay_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Pay_Attorney__c</fullName>
    <description>Pay Attorney</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pay Attorney</inlineHelpText>
    <label>Pay Attorney</label>
    <length>50</length>
    <type>Text</type>
</CustomField>