force-app/main/default/objects/Product_Payment_Staging__c/fields/Pay_Court__c.field-meta.xml
<CustomField>
    <fullName>Pay_Court__c</fullName>
    <description>Pay Court</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pay Court</inlineHelpText>
    <label>Pay Court</label>
    <length>50</length>
    <type>Text</type>
</CustomField>