force-app/main/default/objects/Product_Payment_Staging__c/fields/Pay_Fees__c.field-meta.xml
<CustomField>
    <fullName>Pay_Fees__c</fullName>
    <description>Pay Fees</description>
    <inlineHelpText>Pay Fees</inlineHelpText>
    <label>Pay Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>