force-app/main/default/objects/Product_Payment_Staging__c/fields/Pay_NSF__c.field-meta.xml
<CustomField>
    <fullName>Pay_NSF__c</fullName>
    <description>Pay NSF</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pay NSF</inlineHelpText>
    <label>Pay NSF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>