force-app/main/default/objects/Product_Payment_Staging__c/fields/Pay_Other__c.field-meta.xml
<CustomField>
    <fullName>Pay_Other__c</fullName>
    <description>Pay Other</description>
    <inlineHelpText>Pay Other</inlineHelpText>
    <label>Pay Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>