force-app/main/default/objects/Product_Payment_Staging__c/fields/Pay_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Posting_Date__c</fullName>
    <description>Date Type Payment Posting Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Posting Date</label>
    <type>Date</type>
</CustomField>