force-app/main/default/objects/Product_Payment_Staging__c/fields/Payment_Posting_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Posting_Date__c</fullName>
    <description>Payment Posting Date Text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Posting Date Text</inlineHelpText>
    <label>Payment Posting Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>