force-app/main/default/objects/Product_Payment_Staging__c/fields/Pool_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pool_Commission_Rate__c</fullName>
    <description>Pool Commission Rate</description>
    <inlineHelpText>Pool Commission Rate</inlineHelpText>
    <label>Pool Commission Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>