force-app/main/default/objects/Product_Payment_Staging__c/fields/Pool_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Pool_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pool</label>
    <referenceTo>Pool__c</referenceTo>
    <relationshipLabel>Product Payment Staging</relationshipLabel>
    <relationshipName>Product_Payment_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>