force-app/main/default/objects/Product_Payment_Staging__c/fields/Portfolio_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Group_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Portfolio Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>