force-app/main/default/objects/Product_Payment_Staging__c/fields/Primary_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary_Account_Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>