force-app/main/default/objects/Product_Payment_Staging__c/fields/Product_Agency__c.field-meta.xml
<CustomField>
    <fullName>Product_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Agency</description>
    <inlineHelpText>Product Agency</inlineHelpText>
    <label>Product Agency</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Product Payment Staging</relationshipLabel>
    <relationshipName>Product_Payment_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>