force-app/main/default/objects/Product_Payment_Staging__c/fields/Product_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Product_Commission_Rate__c</fullName>
    <description>Product Commission Rate</description>
    <inlineHelpText>Product Commission Rate</inlineHelpText>
    <label>Product Commission Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>