force-app/main/default/objects/Product_Payment_Staging__c/fields/Product_Payment_Agency__c.field-meta.xml
<CustomField>
    <fullName>Product_Payment_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product_Payment_Agency</description>
    <inlineHelpText>Product_Payment_Agency</inlineHelpText>
    <label>Product Payment Agency</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Product Payment Staging (Product Payment Agency)</relationshipLabel>
    <relationshipName>Product_Payment_Staging1</relationshipName>
    <type>Lookup</type>
</CustomField>