force-app/main/default/objects/Product_Payment_Staging__c/fields/Recoverable_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recoverable_Fee__c</fullName>
    <description>Recoverable Fee</description>
    <inlineHelpText>Recoverable Fee</inlineHelpText>
    <label>Recoverable Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>