force-app/main/default/objects/Product_Payment_Staging__c/fields/Tax_Province_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Province_Rate__c</fullName>
    <description>Used for calculation of Tax amount based on which Province Rate</description>
    <inlineHelpText>Used for calculation of Tax amount based on which Province Rate</inlineHelpText>
    <label>Tax Province Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>