force-app/main/default/objects/Product_Payment_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>CCS_Account__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Posting_Date__c</columns>
    <columns>Payment_Source__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>